[package]
name = "atrium"
version = "0.1.0"
edition = "2021"
authors = ["Atrium Team"]
description = "A high-performance multi-language browser"
license = "MIT"

[dependencies]
# HTML/CSS Parsing
html5ever = "0.27"
cssparser = "0.33"
selectors = "0.25"
markup5ever_rcdom = "0.3"

# Async networking
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
futures = "0.3"

# Parallelism
rayon = "1.8"
num_cpus = "1.16"

# Networking (optional)
ctrlc = { version = "3.4", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ciborium = "0.2"

# Hashing and crypto
blake3 = "1.5"
rustc-hash = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Regex
regex = "1.10"

# Markdown parsing
pulldown-cmark = { version = "0.9", default-features = false }

# KDL configuration
kdl = "6.0"

# Bytes handling
bytes = "1.5"

# Logging
log = "0.4"
env_logger = "0.11"

# GUI (egui) - optional
eframe = { version = "0.31", optional = true }
egui = { version = "0.31", optional = true }
egui_dock = { version = "0.16", optional = true }
egui_extras = { version = "0.31", optional = true }
rfd = { version = "0.15", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "gif"] }

[features]
default = ["custom-formats", "gui"]
gui = ["eframe", "egui", "egui_dock", "egui_extras", "rfd", "image", "custom-formats"]
custom-formats = []

[lib]
name = "atrium_core"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "atrium"
path = "src/main.rs"

[[bin]]
name = "parser-test"
path = "src/parser_test.rs"

[[bin]]
name = "test-minimal"
path = "src/test_minimal.rs"

[dev-dependencies]
rustc-hash = "1.1"
insta = { version = "1.43", features = ["json", "glob"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "css_parser"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
